fixed brand colors & fixed wrapping issues in search container

--- a/css/style.css
+++ b/css/style.css
@@ -69,11 +69,11 @@ body {
     background-color: white;
     border-radius: 20px;
     padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    filter: drop-shadow(0px 3px 15px #D9D9D9);
 }
 
 .card:hover {
-    filter: drop-shadow(0px 10px 8px rgba(0, 0, 0, 0.247));
+    filter: drop-shadow(0px 10px 8px #D9D9D9);
 }
 
 .card img {
@@ -104,6 +104,7 @@ body {
 
 .search-group {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .loc-icon {
@@ -114,22 +115,28 @@ body {
     background-color: var(--filter-bg-color);
     height: 50px;
     width: 50px;
+    border: 1px solid black;
 }
 
 .search {
-    border: 1px solid var(--main-color);
+    border: 1px solid var(--filter-bg-color);
     height: 50px;
     position: relative;
     transition: border-color 0.2s ease-in-out;
     padding: 0 10px;
 }
 
+.search-text {
+    font-weight: bold;
+}
+
+
 .search-button {
     background-color: var(--main-color);
     border-radius: 0 10px 10px 0;
 }
 
-.nav-buttons {
+nav ul{
     list-style: none;
     display: flex;
     flex-direction: row;
@@ -137,48 +144,20 @@ body {
     gap: 20px;
     padding: 0;
     background-color: none;
-  }
-  
-  .nav-button {
-    display: flex;
-    gap: 10px;
-    position: relative;
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .nav-button::before {
-    content: "";
-    position: absolute;
-    top: -4px;
-    left: 0;
-    width: 100%;
-    height: 4px; 
-    background-color: none;
-    transform: scaleX(0); 
-    transform-origin: center;
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  .nav-button:hover::before {
-    transform: scaleX(1); 
-  }
-  
-  @media (max-width: 768px) {
-    .nav {
-      flex-direction: column;
-    }
-  
-    .nav-buttons {
-      width: 100%;
-      background-color: none;
-    }
-  }
+}
+
+nav a {
+    /* border-top: 2px solid var(--main-color); */
+}
+
+nav a:hover {
+    border-top: 2px solid var(--main-color);
+}
 
   .filter-list {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-content: center;
     align-items: center;
     list-style-type: none;
@@ -217,7 +196,7 @@ body {
 		&:hover {
 			color: var(--brand-primary);
 			cursor: pointer;
-            filter: drop-shadow(0px 10px 8px rgba(0, 0, 0, 0.247));
+            filter: drop-shadow(0px 10px 8px #D9D9D9);
 
 			svg {
 				transform: rotate(20deg) scale(1.1);
@@ -230,7 +209,6 @@ body {
             }
 		}
     }
-
 
   .icon {
 	align-items: center;
@@ -282,14 +260,6 @@ body {
 
 }
 
-@media (max-width: 1030px) {
-    .accom-and-pop-contents {
-      display: flex;
-      flex-direction: column-reverse;
-      justify-content: center;
-    }
-}
-
 .accommodation-and-popular section {
     /*targets both accomidation and popular <section> elements */
     background-color: var(--main-bg-color);
@@ -317,12 +287,6 @@ body {
     gap: 20px
 }
 
-@media (max-width: 768px) {
-    .accommodation-cards {
-        grid-template-columns: 1fr;
-    }
-}
-
 .accommodation-cards .card {
     display: flex;
     align-items: flex-start;
@@ -334,13 +298,6 @@ body {
     height: auto;
     aspect-ratio: 250 / 210;
 
-}
-
-@media (max-width: 1024px) {
-    .cards {
-      width: 355px;
-      height: 210px;
-    }
 }
 
 .accommodation-cards img {
@@ -422,12 +379,6 @@ body {
 
 /* activities */
 
-
-.activity-container {
-
-}
-
-
 .activities {
     display: flex;
     flex-direction: column;
@@ -443,21 +394,18 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 30px;
-    filter: drop-shadow(0px 10px 8px rgba(0, 0, 0, 0.178));
-    transition: box-shadow: 0.3s ease;
-}
-
-.activities-cards {
+    filter: drop-shadow(0px 10px 8px #D9D9D9);
+    transition: box-shadow 0.3s ease;
 }
 
 .activities-cards .postcard {
-    background-color: rgb(255, 255, 255);
+    background-color: var(--main-bg-color);
     max-width: 300px;
     border-radius: 20px;
 }
 
 .postcard:hover {
-    filter: drop-shadow(0px 10px 8px rgba(0, 0, 0, 0.247));   
+    filter: drop-shadow(0px 10px 8px #D9D9D9);   
 }
 
 .postcard-title {
@@ -484,10 +432,6 @@ footer {
     margin-left: auto;
     margin-right: auto;
     box-sizing: border-box;
-}
-
-.footer-container {
-   
 }
 
 .footer-columns { 
@@ -527,4 +471,36 @@ footer {
 .list-link:hover {
     text-decoration: underline;
     color: var(--main-color);
+}
+
+/* Media Queries */ 
+
+/* MOBILE */ 
+@media (max-width: 600px) {
+    .accommodation-cards {
+        grid-template-columns: 1fr;
+    }
+}
+
+/* TABLET */
+@media (max-width: 1024px) {
+    .accom-and-pop-contents {
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: center;
+    }
+    .cards {
+        width: 355px;
+        height: 210px;
+    }
+}
+
+/* DESKTOP */
+@media (max-width: 1450px) {
+
+}
+
+/* LARGE DESKTOP */
+@media (max-width: 1024px) {
+
 }
